# playwright-web-app

./: .auto-claude-security.json  .circuit_breaker_state  .claude_settings.json  .gitignore  AGENT_10_GRAMMAR_VALIDATOR.md  AGENT_DELEGATION_PLAN.md  AGENT_STATUS_TRACKER.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  EXECUTION_ORDER.md  FINAL_AGENT_SWARM_PLAN.md  PHASE_1_PREP.md  PROJECT_SUMMARY.md  PROMPT.md  QUICKSTART.md  README.md  README_AGENT_SWARM.md  TEST_DATA_MANAGEMENT_DESIGN.md  progress.json  status.json
.claude/: launch.json  settings.json  settings.local.json
agent/: .env.example  package-lock.json  package.json  playwright.config.ts
backend/: .env.example  .eslintrc.cjs  add-reference-file.cjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  temp-headed.spec.ts  tsconfig.json  vitest.config.ts
chrome-extension/: manifest.json
docker/: Dockerfile.coordinator  (+3 more)
vero-agent/: .env.example  AGENT_1_COMPLETE.md  README.md  pyproject.toml  run_test.py  test_live_agent.py
vero-agent/docs/: GEMINI_SETUP.md  INTELLIGENT_AGENT_ARCHITECTURE.md
vero-agent/src/: __init__.py  config.py  execution_store.py  intelligent_selector.py  learning_loop.py  live_execution_agent.py  live_execution_server.py  main.py  semantic_search.py  test_runner.py  vero_recorder.py
vero-agent/src/agent/: __init__.py  gemini_computer_use.py  page_updater.py  retry_executor.py  selector_bridge.py  selector_resolver.py  vero_generator.py
vero-agent/src/prompts/: __init__.py  system.txt
vero-agent/tests/: test_gemini_integration.py  test_live_execution.py
(+1969 files in other folders)
